--- a/escom-bpm-web/src/main/webapp/view/docs/locks/doclock.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/docs/locks/doclock.xhtml
@@ -5,7 +5,7 @@
                  xmlns:f="http://xmlns.jcp.org/jsf/core"
                  xmlns:h="http://xmlns.jcp.org/jsf/html"
                  template="/view/templ/templ.xhtml">
-        
+
     <ui:define name="preRendered">
         <f:metadata>
             <f:event type="preRenderView" listener="#{docLockBean.onOpenCard()}"/>
@@ -13,39 +13,83 @@
     </ui:define>
 
     <ui:define name="title">
-        #{bundle.SettingLock}
+        #{docLockBean.attacheLock ? bundle.UnLock : bundle.SettingLock}
     </ui:define>
 
     <ui:define name="body">
+
         <pe:layout fullPage="true" options="#{docLockBean.layoutOptions}" widgetVar="fpLayoutWidget">
             <p:ajax event="resize" listener="#{docLockBean.handleResize}"/> 
             <pe:layoutPane position="center" resizable="true">
                 <h:form id="lockForm" style="font-size: 90%;"> 
+                    <h:outputScript library="js" name="ITHitWebDAVClient.js" /> 
+
+                    <script type="text/javascript">
+                        function CopyToClipboard(text) {
+                            window.prompt("#{bundle.CopyToClipboard}", text);
+                        }
+
+                        function EditDoc(sDocumentUrl, sFolderUrl) {
+                            var oNs = ITHit.WebDAV.Client.DocManager;
+                            oNs.DavProtocolEditDocument(sDocumentUrl, sFolderUrl, ProtocolInstallCallback);
+                        }
+
+                        function ProtocolInstallCallback(message) {
+                            var installerFilePath = "http://www.ajaxbrowser.com/ITHitService/WebDAVAJAXLibrary/Plugins/" +
+                                    ITHit.WebDAV.Client.DocManager.GetInstallFileName();
+
+                            if (confirm("#{msg.RequiresProtocolInstallation}")) {
+                                window.open(installerFilePath);
+                            }
+                        }
+                    </script>
+
                     <p:messages id="messages" showDetail="true" autoUpdate="true" closable="true" />
-                    <p:panelGrid columns="2" columnClasses="ui-grid-col-3, ui-grid-col-9" styleClass="ui-grid-col-12">
-                        <p:graphicImage name="/images/info.jpg"/>
-                        <h:outputText value="#{msg.SettingLockDocInfo}" />
-                    </p:panelGrid>
                     <p:panelGrid columns="1" columnClasses="ui-grid-col-12" styleClass="ui-grid-col-12">
-                        <h:outputText value="#{msg.SetLockDocAndOpenFile}" />
-                        <p:outputLabel value="#{bundle.DateAutoUnlock}" />
-                        <p:calendar id="dateLock" value="#{docLockBean.lockDate}" title="#{bundle.DatePlanUnlock}"
-                                styleClass="ui-grid-col-12"
-                                required="true" 
-                                showButtonPanel="true" showHour="true" showMinute="true"
-                                pattern="dd.MM.yyyy HH:mm" mask="99.99.9999"
-                                navigator="true" yearRange="1900:+0" mindate="#{currentDate}"                               
-                                requiredMessage="#{bundle.Field} [#{bundle.DatePlanUnlock}] #{bundle.MustBeFilled}">
-                        </p:calendar> 
-                    </p:panelGrid>                    
-                    <p:toolbar styleClass="ui-grid-col-12">
-                        <f:facet name="right">
-                            <p:commandButton value="#{bundle.Save}" title="#{bundle.SaveAndClose}" 
-                                             action="#{docLockBean.makeLock()}"/>
-                            <p:commandButton value="#{bundle.Close}" style="float:right;"                                             
-                                             action="#{docLockBean.onCloseCard()}"/> 
-                        </f:facet>
-                    </p:toolbar>
+                        <p:panelGrid columns="2" columnClasses="ui-grid-col-3, ui-grid-col-9" styleClass="ui-grid-col-12">                             
+                            <p:outputLabel value="#{bundle.LockPeriod}"/>
+                            <p:calendar id="dateLock" value="#{docLockBean.lockDate}" title="#{bundle.DatePlanUnlock}"
+                                        styleClass="ui-grid-col-12" 
+                                        required="true" navigator="true" showButtonPanel="true"
+                                        showHour="true" pattern="dd.MM.yyyy HH:mm" mask="true"                               
+                                        mindate="#{docLockBean.minLockDate}" maxdate="#{docLockBean.maxLockDate}"                              
+                                        requiredMessage="#{bundle.Field} [#{bundle.DatePlanUnlock}] #{bundle.MustBeFilled}">
+                                <p:ajax event="dateSelect" listener="#{docLockBean.onChangeDateLock}" />
+                            </p:calendar>
+                        </p:panelGrid> 
+                        <p:separator />
+                        <p:panelGrid columns="2" columnClasses="ui-grid-col-3, ui-grid-col-9" styleClass="ui-grid-col-12">
+                            <p:graphicImage name="/images/info.jpg"/> 
+                            <h:outputText value="#{msg.SettingLockDocInfo}" /> 
+                            <p:spacer />
+                            <h:panelGroup>
+                                <p:separator />
+                                <h:outputText value="#{msg.SetLockDocAndOpenFile}" rendered="#{!docLockBean.attacheLock}"/>
+                                <h:outputText value="#{msg.SetUnLockDoc}" rendered="#{docLockBean.attacheLock}"/>
+                            </h:panelGroup>
+                        </p:panelGrid>
+                        <p:toolbar styleClass="ui-grid-col-12">
+                            <f:facet name="left">
+                                <p:commandButton value="#{bundle.RestartTimer}"  
+                                                 rendered="#{docLockBean.canShowRestartTimerBtn}"                                             
+                                                 actionListener="#{docLockBean.changeDatePlanLock()}"/>
+                                <p:commandButton value="#{bundle.GetURL}" title="#{bundle.GetLinkForEdit}" 
+                                                 rendered="#{docLockBean.attacheLock and docLockBean.userIsEditor}"
+                                                 actionListener="#{docLockBean.showFileLink()}"/>
+                            </f:facet>
+                            <f:facet name="right">
+                                <p:commandButton value="#{bundle.SetLock}" title="#{bundle.SetLockAndEdit}"
+                                                 rendered="#{!docLockBean.attacheLock}"
+                                                 action="#{docLockBean.makeLock()}"/>
+                                <p:commandButton value="#{bundle.SetUnLock}" 
+                                                 rendered="#{docLockBean.attacheLock}"
+                                                 action="#{docLockBean.makeUnLock()}"/>
+                                <p:commandButton value="#{bundle.Close}" style="float:right;"                                             
+                                                 process="@this"
+                                                 action="#{docLockBean.onCloseCard()}"/> 
+                            </f:facet>
+                        </p:toolbar>
+                    </p:panelGrid>
                 </h:form>
             </pe:layoutPane>
         </pe:layout>
