--- a/escom-bpm-web/src/main/webapp/view/services/common/log-events.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/services/common/log-events.xhtml
@@ -31,6 +31,7 @@
                  emptyMessage="#{bundle.EmptyTable}"
                  paginator="true" paginatorPosition="bottom"  
                  paginatorTemplate="{CurrentPageReport} {FirstPageLink} {PreviousPageLink} {PageLinks} {NextPageLink} {LastPageLink} {RowsPerPageDropdown}"
+                 currentPageReportTemplate="#{bundle.CountRecords}: {totalRecords}, #{bundle.Showing} {startRecord}-{endRecord} "
                  rows="25" rowsPerPageTemplate="25,50,100" 
                  tableStyle="table-layout: auto;" styleClass="ui-grid-col-12"
                  rowKey="#{item.id}" sortBy="#{item.dateStart}"
@@ -41,18 +42,17 @@
                 oncomplete="PF('dlgDetail').show();" update="logFRM:logDetailPanel"/> 
 
         <p:column headerText="#{bundle.DateStart}" sortBy="#{item.dateStart}">
-            <p:outputLabel value="#{item.dateStart}" >
-                <f:convertDateTime pattern="dd.MM.yyyy HH:mm" locale="RU" timeZone="#{TimeZone.getDefault()}"/>
-            </p:outputLabel>
+            <h:outputLabel value="#{item.dateStart}" >
+                <f:convertDateTime pattern="dd.MM.yyyy HH:mm:ss" locale="RU" timeZone="#{TimeZone.getDefault()}"/>
+            </h:outputLabel>
         </p:column>
         <p:column headerText="#{bundle.DateFinish}" sortBy="#{item.dateFinish}">
-            <p:outputLabel value="#{item.dateFinish}">
-                <f:convertDateTime pattern="dd.MM.yyyy HH:mm" locale="RU" timeZone="#{TimeZone.getDefault()}"/>
-            </p:outputLabel>
+            <h:outputLabel value="#{item.dateFinish}">
+                <f:convertDateTime pattern="dd.MM.yyyy HH:mm:ss" locale="RU" timeZone="#{TimeZone.getDefault()}"/>
+            </h:outputLabel>
         </p:column>
         <p:column headerText="#{bundle.Duration}" >
-            <p:outputLabel value="#{item.duration}">
-            </p:outputLabel>
+            #{item.duration}
         </p:column>
         <p:column headerText="#{bundle.Result}" sortBy="#{item.result}">
             #{item.result}
